<resources>
    <string name="app_name">GoService</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="segundo_nome">Segundo Nome</string>
    <string name="numero">Numero</string>
    <string name="uf">UF</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="email">Email</string>
    <string name="site">Site</string>
    <string name="telefone">Telefone</string>
    <string name="cancelar">Cancelar</string>
    <string name="gravar">Gravar</string>
    <string name="cidade">Cidade</string>
    <string name="rua_avenida">Rua / Avenida</string>
    <string name="cpf">CPF</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="gerencia_cards">Gerencia Cards</string>
    <string name="prestadores">Prestadores</string>
    <string name="solicita_es">Solicitações</string>
    <string name="perfil">Perfil</string>
    <string name="textview">TextView</string>
    <string name="user_name">user name</string>
    <string name="cidade_uf">cidade uf</string>
    <string name="seu_site">seu site</string>
    <string name="seu_email">seu email</string>
    <string name="torne_se_prestador">Torne-se Prestador</string>
    <string name="botao_provisorio_para_cad">Botao provisorio para cad</string>
    <string name="entrar">entrar</string>
    <string name="loginPass">Senha</string>
    <string name="loginUser">Usuario</string>
    <string name="logo">LogoGoServiceLogin</string>
    <string name="cadastre_agora">Cadastre agora</string>
    <string name="gravarCadLogin">Gravar</string>
    <string name="insira_seu_usuario">Insira seu Usuário</string>
    <string name="insira_sua_senha">Insira sua Senha</string>
    <string name="cnpj">CNPJ</string>
    <string name="cadastre_se_agora">Cadastre-se agora</string>
    <string name="ufbr">UF</string>
    <string name="bio">Bio</string>
    <string name="avaliacao">Avaliacao</string>
    <string name="bio_desc">Bio</string>
    <string name="nome_do_servico">Nome do Serviço</string>
    <string name="valor_servico">R$</string>
    <string name="descricao_servico">Descrição</string>
    <string name="sub_categoria">Sub Categoria</string>
    <string name="categoria">Categoria</string>
    <string name="cadastro_servico">Cadastro Servico</string>
    <string name="cadastro">Cadastro</string>
    <string name="sem_conexao">Sem Conexão</string>
    <string name="todo">TODO</string>
    <string name="informe_algo_sobre_voce">Informe algo sobre você</string>

    <string-array name="uf">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <!--<string-array name="categoria_servico">
        <item> </item>
        <item>Informática</item>
        <item>Marcenaria</item>
    </string-array>
    <string-array name="sub_categoria_servico">
        <item> </item>
    </string-array>
    <string-array name="sub_categoria_servico_Informática">
        <item>Geral</item>
        <item>Formatação</item>
        <item>Instalaçao de Programa</item>
        <item>Remoção de vírus</item>
        <item>Configuração de rede</item>
        <item>Intalação de disposítivo</item>
    </string-array>
    <string-array name="sub_categoria_servico_Marcenaria">
        <item>Geral</item>
        <item>Instalação de prateleira</item>
        <item>Montagem de móvel</item>
        <item>Desmontagem de móvel</item>
        <item>Montagem/Desmontagem de móvel</item>
    </string-array>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>