<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtSegundoNome"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segundo_nome"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrimeiroNome" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNumero"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRuaAvenida" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtUF"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/uf"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/edtCidade"
        app:layout_constraintTop_toBottomOf="@+id/edtCEP" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtBairro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="textPersonName|textPostalAddress"
        app:layout_constraintStart_toEndOf="@+id/edtNumero"
        app:layout_constraintTop_toBottomOf="@+id/edtRuaAvenida" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPrimeiroNome"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primeiro_nome"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCEP"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cep"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumero" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtSite"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/site"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtTelefone"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCNPJCPF"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelarCadUser"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGravarCadUser"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:onClick="btn_gravar_usuario"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCidade"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCEP"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtRuaAvenida"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/rua_avenida"
        android:inputType="textPostalAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSite" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCNPJCPF"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSegundoNome"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:text="@string/cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>