<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#071219"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <View
        android:id="@+id/myRectangleView23"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/retangle_border_view_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView5" />

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/retangle_border_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView4" />

    <View
        android:id="@+id/myRectangleView5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/retangle_border_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />

    <View
        android:id="@+id/myRectangleView18"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/retangle_border_view"
        app:layout_constraintEnd_toStartOf="@+id/myRectangleView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView23" />

    <View
        android:id="@+id/myRectangleView3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/retangle_border_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myRectangleView18"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView23" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtValorServico"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/valor_servico"
        android:inputType="numberDecimal"
        android:textColor="#d5d5d5"
        android:textColorHint="#6b6b6b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeServico"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNomeServico"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome_do_servico"
        android:inputType="textPersonName"
        android:textColor="#d5d5d5"
        android:textColorHint="#6b6b6b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelarCadServico"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#750709"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGravarCadServico"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#009f10"
        android:onClick="btn_gravar_servico"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/myRectangleView4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/retangle_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--app:mask="###.###.###-##"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/cadastro_servico"
        android:textAlignment="center"
        android:textColor="#d5d5d5"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#6b6b6b"
        android:popupBackground="@drawable/retangle_border_view_2"
        android:dropDownVerticalOffset="45dp"
        android:hint="@string/categoria"
        android:textColor="#d5d5d5"
        android:textColorHint="#6b6b6b"
        app:layout_constraintEnd_toStartOf="@+id/spinner_sub_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView23"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinner_sub_categoria"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#6b6b6b"
        android:hint="@string/categoria"
        android:textColor="#d5d5d5"
        android:textColorHint="#6b6b6b"
        android:popupBackground="@drawable/retangle_border_view_2"
        android:dropDownVerticalOffset="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_categoria"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView23"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtDescricaoServico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:backgroundTint="#6b6b6b"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descricao_servico"
        android:inputType="textMultiLine"
        android:textColor="#d5d5d5"
        android:textColorHint="#6b6b6b"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView23"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView23"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView23"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView23"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>